# gleam_sqlc

./: .gitignore  .mise.toml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build.yml  e2e.yml  release.yml
end2end/: .env  docker-compose.yml  postgres.Dockerfile  sqlc.yaml
end2end/gleam_sqlite_test_project/: gleam.toml  manifest.toml
end2end/gleam_sqlite_test_project/test/: sqlc_sqlite_e2e_test_test.gleam
end2end/gleam_test_project/: gleam.toml  manifest.toml
end2end/gleam_test_project/test/: sqlc_e2e_test_test.gleam
examples/authors/: query.sql  schema.sql  sqlc.yaml
examples/config/: sqlc.yaml
examples/config/sqlite/authors/: query.sql  schema.sql
examples/config/sqlite/types/: query.sql  schema.sql
proto/plugin/: codegen.proto
src/: codegen.rs  main.rs  options.rs  plugin.rs  utils.rs
src/driver/: mod.rs  postgres.rs  query_gen.rs  sqlite.rs  traits.rs  type_map.rs
src/generators/: mod.rs  models.rs  naming.rs  queries.rs
