[package]
name = "sqlc-gen-gleam"
version = "0.1.0"
edition = "2024"
description = "A sqlc plugin that generates type-safe Gleam code targeting PostGleam"

[dependencies]
prost = "0.13"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prost-build = "0.13"

[profile.release]
lto = true
opt-level = "z"
strip = true
